# osu_micro_benchmark_mcdram

mpi/one-sided/: Makefile.am  Makefile.in  osu_1sc.c  osu_1sc.h  osu_get_mbw.c  osu_get_multi_lat.c  osu_mcdram.c  osu_put_bw.c  osu_put_latency.c  osu_put_mbw.c  osu_put_multi_lat.c
mpi/pt2pt/: Makefile.am  Makefile.in  osu_bw.c  osu_latency.c  osu_mbw_mr.c  osu_mcdram.c  osu_mcdram.h  osu_multi_lat.c  osu_pt2pt.c  osu_pt2pt.h
